# AKARI-Proxy

./: .gitignore  AKARIProxy.md  AKARIProxy問題点.md  CHANGELOG.md  Cargo.toml  My Example Source.json  PLAN.md  README.md  build_errors.txt  main.py  now.md  pyproject.toml  stressnow.md  v3計画書.md  乖離.md  発表用負荷テストデータ.md  要件定義書.md
akari_flutter/: README.md  analysis_options.yaml  analysis_results.txt  android_build_log.txt  build_error_log.txt  build_log.txt  pubspec.yaml  rebuild_log.txt  test_brotli.dart  test_brotli_prefix.dart
conf/: local.toml  remote.toml  remote_test.toml  web_proxy.toml  web_proxy_test.toml
crates/akari_udp_core/: Cargo.toml
crates/akari_udp_core/src/: aead.rs  client.rs  debug.rs  decode.rs  decode_v3.rs  encode.rs  encode_v3.rs  error.rs  header.rs  header_v3.rs  hmac.rs  lib.rs  payload.rs
crates/akari_udp_py/: Cargo.toml  build.rs
crates/akari_udp_py/src/: lib.rs
docs/: AKARI.md  architecture.md  audit_report.md  disaster_loadtest_plan.md  disaster_loadtest_report.md  disaster_stress_test.md  flutter_migration_plan.md  flutter_rust_build.md  loadtest_report.md  presentation_akari_proxy.md  presentation_template.md  url_fetch_tutorial.md
loadtest/: README.md  disaster_suite.py  udp_load_runner.py
logs/: disaster_report.md  disaster_suite_events.jsonl  disaster_suite_events_latest.jsonl  disaster_suite_history.jsonl  disaster_suite_history_latest.jsonl  disaster_suite_summary.json  disaster_suite_summary_latest.json  stress_akaei.jsonl  stress_no_timeout.jsonl  stress_post_tail_nack.jsonl  stress_post_tail_nack_1000.jsonl  (+6 more)
(+102 files in other folders)
