[package]
name = "akari_udp_core"
version = "0.1.0"
edition = "2021"
authors = ["akari-dev"]
description = "Core Rust implementation of AKARI-UDP v1 packet encoding/decoding."
license = "MIT"

[dependencies]
hmac = "0.12"
sha2 = "0.10"
thiserror = "1.0"
tracing = { version = "0.1", optional = true }
hex = "0.4"
chacha20poly1305 = "0.10"

[features]
default = []
# 有効化すると encode/decode の詳細ログを tracing 経由で出力
debug-log = ["tracing"]
